conecxão banco de dados

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
                     </form>
-                    <form action="tela_login.php">
+                    <form action="tela_login.html">
                         <button name="btn_logoff" id="btn_logoff" class="btn btn-outline-dark-logoff " type="auto">
                             logoff
                         </button>
