--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    //teste
+
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -81,7 +81,7 @@
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
                     </form>
-                    <form action="tela_login.html">
+                    <form action="tela_login.php">
                         <button name="btn_logoff" id="btn_logoff" class="btn btn-outline-dark-logoff " type="auto">
                             logoff
                         </button>
