--- a/carrinho.html
+++ b/carrinho.html
@@ -50,12 +50,10 @@
         <p>CONTEUDO DO CARRINHO AQUI</p>
 
 
-        <!-- Rodapé-->
-        <div class="rodape">
-            <footer class="py-3 bg-dark">
-                <p class="m-0 text-center text-white">Copyright &copy; Eletronics Store 2021</p>
-            </footer>
-        </div>
+        <!-- Definindo o footer padrão das páginas 
+            <?php include ('footer.php');?>
+        -->
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
