--- a/carrinho.html
+++ b/carrinho.html
@@ -113,7 +113,7 @@
                         <div class="col-md-12 col-lg-4">
                             <div class="card h-auto" style="width:min-content">
                                 <div class="summary">
-                                    <h3>Summary</h3>
+                                    <h3>Total</h3>
                                     <div class="summary-item"><span class="text">Subtotal</span><span
                                             class="price">$360</span></div>
                                     <div class="summary-item"><span class="text">Discount</span><span
