--- a/carrinho.html
+++ b/carrinho.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -111,22 +113,18 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-4">
-                            <div class="card h-auto" style="width:min-content">
+                            <div class="card h-auto" style="width:200px;">
                                 <div class="summary">
+                                    
                                     <h3>Total</h3>
-                                    <div class="summary-item"><span class="text">Subtotal</span><span
+                                    <div class="summary-item"><span class="text">SubTotal:  </span><span
                                             class="price">$360</span></div>
-                                    <div class="summary-item"><span class="text">Discount</span><span
-                                            class="price">$0</span></div>
-                                    <div class="summary-item"><span class="text">Shipping</span><span
-                                            class="price">$0</span></div>
-                                    <div class="summary-item"><span class="text">Total</span><span
-                                            class="price">$360</span></div>
+                                            <br>
 
                                 </div>
                             </div>
                             <br>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Checkout</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Confirmar Compra</button>
                         </div>
                     </div>
                 </div>
@@ -137,9 +135,7 @@
 
 
 
-    <!-- Definindo o footer padrão das páginas 
-            <?php include ('footer.php');?>
-        -->
+    
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
